--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,19 @@
-<div id="root"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Modern Portifolio</title>
+  <!-- Include your CSS links here -->
+  <link href="../style.css" rel="stylesheet">
+</head>
+<body>
+  <div id="root"></div>
+
+  <!-- Include the Bootstrap JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Your main React script -->
+  <script src="../App.js"></script>
+</body>
+</html>
